# my-thesis

./: CMakeLists.txt  QRapidshare.pro  ToDo  qrsdmtest.cpp
DownloadManager_lib/: CMakeLists.txt  qrsdmtest.cpp  qtestapp.h
DownloadManager_lib/src/: CMakeLists.txt  downloadengine.cpp  downloadengine.h  downloadmanager.cpp  downloadmanager.h  engine.inl  enginemanager.cpp  enginemanager.h  idownload.cpp  idownload.h  optionscontainer.cpp  optionscontainer.h  progressinfo.h  qrapidsharedownload.cpp  qrapidsharedownload.h  rapidsharedownloadmanager.cpp  rapidsharedownloadmanager.h  rscommon.cpp  rscommon.h  rslogger.cpp  rslogger.h  signalreceiver.cpp  signalreceiver.h  signalreceiverfactory.cpp
DownloadManager_lib/src/engines/ftp/: ftpdownload.cpp  ftpdownload.h
DownloadManager_lib/src/engines/http/: httpdownload.cpp  httpdownload.h
DownloadManager_lib/src/engines/rapidshare/: qrapidsharedownload.cpp  qrapidsharedownload.h  qrapidshareuser.cpp  qrapidshareuser.h  rapidshareengine.cpp  rapidshareengine.h
DownloadManager_ui/: CMakeLists.txt
DownloadManager_ui/src/: actions.cpp  actions.h  adddownloaddialog.cpp  adddownloaddialog.h  columnsconfigdialog.cpp  columnsconfigdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  qdownloadwidget.cpp  qdownloadwidget.h  systemdock.cpp  systemdock.h  systemtraytooltip.cpp
DownloadManager_ui/src/resources/: main_resources.qrc  resources.rc
DownloadManager_ui/src/settings_ui/: connectionsettingspage.cpp  connectionsettingspage.h  generalsettingspage.cpp  generalsettingspage.h  isettingspage.h  serversettingspage.cpp  serversettingspage.h  settingsdialog.cpp  settingsdialog.h
DownloadManager_ui/src/ui/: columnsConfig.ui
QtRapidshareDownloadManager_app/: CMakeLists.txt
QtRapidshareDownloadManager_app/src/: CMakeLists.txt  DownloadView.cpp  DownloadView.h  Ui_AddDownloadFileImpl.h  Ui_UserSettingsImpl.h  common.cpp  common.h  downloadItem.cpp  main.cpp  mainwindow.cpp  mainwindow.h
QtRapidshareDownloadManager_corelib/: CMakeLists.txt  qrsdmtest.cpp
QtRapidshareDownloadManager_corelib/src/: qrapidsharedownload.h  rapidsharedownloadmanager.cpp  rapidsharedownloadmanager.h
Ui_template/src/: Makefile  downloadviewdelegate.cpp  downloadviewdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  src.pro
app/src/: CMakeLists.txt  DownloadView.cpp  DownloadView.h  Ui_UserSettingsImpl.h  common.cpp  common.h  downloadItem.h  downloaddelegate.cpp  downloaddelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  pages.cpp  pages.h
new/QtRapidshareDownloadManager_app/src/: CMakeLists.txt  DownloadView.cpp  Ui_AddDownloadFileImpl.cpp  Ui_UserSettingsImpl.cpp  common.h  configurationdialog.cpp  configurationdialog.h  main.cpp
new/QtRapidshareDownloadManager_corelib/: CMakeLists.txt
new/QtRapidshareDownloadManager_corelib/src/: CMakeLists.txt  qrapidsharedownload.cpp  qrapidsharedownload.h  qrapidshareuser.h  rapidsharedownloadmanager.cpp  rapidsharedownloadmanager.h  rscommon.h  rslogger.cpp
new_layout/: CMakeLists.txt
new_layout/src/: CMakeLists.txt  actions.cpp  actions.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  qappstyle.cpp  qappstyle.h  qdownloadwidget.cpp  qdownloadwidget.h  toolbar.h
new_layout/src/resources/: main_resources.qrc
proxy_lib/: CMakeLists.txt
proxy_lib/src/: proxy.cpp  proxy.h  settings.cpp  settings.h  signalhandler.cpp  version.h
resources/: main_resources.qrc
rsdm/: CMakeLists.txt  debugutils.cpp  debugutils.h  qrapidsharedownload.cpp  qrapidsharedownload.h  qrapidshareuser.h  rapidsharedownloadmanager.cpp  rapidsharedownloadmanager.h  rscommon.cpp  rscommon.h  rslogger.cpp  rslogger.h
src/: Ui_AddDownloadFile.cpp  Ui_AddDownloadFile.h  Ui_AddDownloadFileImpl.cpp  Ui_UserSettingsImpl.cpp  Ui_UserSettingsImpl.h  common.h  configurationdialog.cpp  configurationdialog.h  debugutils.cpp  debugutils.h  dialogimpl.cpp  dialogimpl.h  downloaddelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.moc  qrapidsharedownload.cpp  qrapidsharedownload.h  qrapidshareuser.cpp  qrapidshareuser.h  rapidsharedownloadmanager.cpp  rapidsharedownloadmanager.h  rslogger.cpp  rslogger.h
src/rapidsharemanager/: debugutils.h  qrapidsharedownload.cpp  qrapidsharedownload.h  qrapidshareuser.cpp  qrapidshareuser.h  rapidsharedownloadmanager.cpp  rapidsharedownloadmanager.h  rslogger.cpp  rslogger.h
thesis/app/: CMakeLists.txt  app.kdev4
thesis/app/.kdev4/: app.kdev4
thesis/app/cmake/Modules/: FindQwt.cmake  FindQwt5.cmake
thesis/app/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
thesis/app/src/Common/: settings.cpp  settings.h
thesis/app/src/UI/: actions.cpp  actions.h  functionedit.cpp  functionedit.h  functionplot.cpp  functionplot.h  functionwidget.cpp  functionwidget.h  menus.cpp  menus.h  stylesheets.cpp  stylesheets.h
thesis/app/src/math/: function.cpp  function.h  parserfactory.cpp  parserfactory.h
ui/: adddownload.ui  dialog.ui  usersettings.ui
ver002/: CMakeLists.txt  desc
ver002/DownloadManager_lib/: qtestapp.h
ver002/DownloadManager_lib/src/: downloadengine.h  downloadmanager.cpp  downloadmanager.h  engine.h  enginemanager.cpp  idownload.cpp  idownload.h  optionscontainer.cpp  rscommon.cpp  signalreceiver.cpp  signalreceiverfactory.h
ver002/DownloadManager_lib/src/engines/ftp/: ftpdownload.cpp  ftpdownload.h
ver002/DownloadManager_lib/src/engines/http/: httpdownload.cpp  httpdownload.h
ver002/DownloadManager_lib/src/engines/rapidshare/: qrapidshareuser.cpp
ver002/DownloadManager_ui/: CMakeLists.txt  GPL.txt
ver002/DownloadManager_ui/src/: CMakeLists.txt  actions.cpp  actions.h  adddownloaddialog.cpp  adddownloaddialog.h  columnsconfigdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  qdownloadwidget.cpp  systemdock.h  systemtraytooltip.h  toolbar.cpp  toolbar.h
ver002/DownloadManager_ui/src/settings_ui/: connectionsettingspage.cpp  connectionsettingspage.h  serversettingspage.cpp  serversettingspage.h  settingsdialog.cpp
ver002/proxy_lib/src/: proxy.h  settings.cpp  signalhandler.h
(+1 files in other folders)
